add the social midia imgs, modified index

--- a/index.html
+++ b/index.html
@@ -21,22 +21,22 @@
                             <ul>
                                 <li>
                                     <a href=""> 
-                                      <img src="./imagem/Whats.png"  width="45px" height="45px" alt=""> 
+                                      <img src="./imagem/img.whatts.png"  width="30px" height="30px" alt=""> 
                                     </a>
                                 </li>
                                 <li>
                                   <a href=""> 
-                                      <img src="./imagem/Face.png" width="47px" height="47px"  alt=""> 
+                                      <img src="./imagem/img.face.png" width="30px" height="30px"  alt=""> 
                                   </a>
                                 </li>
                                 <li>
                                   <a href=""> 
-                                      <img src="./imagem/Link.png" width="45px" height="45px" alt="">  
+                                      <img src="./imagem/img.linkedin.png" width="30px" height="30px" alt="">  
                                   </a>
                                 </li>
                                 <li>
                                   <a href=""> 
-                                    <img src="./imagem/Inst.png" width="45px" height="45px" alt=""> 
+                                    <img src="./imagem/img.insta.png" width="30px" height="30px" alt=""> 
                                   </a>
                                 </li>
                             </ul>
@@ -45,15 +45,17 @@
       </div>    
           <div class = "planofundo">
             <img src="./imagem/tela inicial.jpg" alt="" class="fundo" >
-         <!-- <img src="./imagem/exagonal.png" alt="" class = "seletor"> -->
+            <img src="./imagem/exagonal.png" alt="" class = "seletor"> 
           </div> 
                 <section>
                   <p>NEWS LETTER</p>
+                  
                 </section>
     </body>
     <footer>
       <a href="#topo">VOLTAR</a>
       <p> Todos os direitos reservados - F.bio soluções biológicas </p>
+      span &copy; 
     </footer>
 
 </html>
